[package]
name = "stellaris_mod_sorter"
version = "0.1.0"
authors = ["theseriousadult <jack@kalix.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde_json = "1.0.44"
human-panic = "1.0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]
